--- a/iqac-frontend/src/allPages/Login/login.css
+++ b/iqac-frontend/src/allPages/Login/login.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -9,7 +10,9 @@ body {
     align-items: center;
     justify-content: center;
   }
-  
+  .para{
+    font-size: 13px;
+  }
   .welcome-section {
     flex: 0 0 40%; /* Adjust this value to your desired width */
     height: 100%;
@@ -38,12 +41,16 @@ body {
     align-items: center;
     justify-content: center;
   }
+  .head{
+    margin-bottom: 40px;
+  }
   
   .login-card {
     background: white;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 40px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+    padding: 100px;
     text-align: center;
   }
   
@@ -51,17 +58,25 @@ body {
     margin-bottom: 20px;
   }
   
+  .fixed-size-image {
+    width: 40px;
+    margin-bottom: 30px;
+    height: auto; /* Keeps the aspect ratio */
+  }
+  
+
   .google-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4285f4;
-    color: white;
+    background-color: #ebeced;
+    color: rgb(18, 17, 17);
     border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
+    border-radius: 14px;
+    padding: 10px 35px;
+    font-size: 15px;
     cursor: pointer;
+    margin-bottom: 15px;
   }
   
   .google-logo {
